--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sample</title>
+    <style>
+        .prasad{
+            height: 300px;
+            width: 200px;
+            background-color: red;
+            float: left;
+        }
+    </style>
 </head>
 <body>
-    <h1>Sample code</h1>
+    <div class="prasad"></div>
 </body>
 </html>
